# RPN-Postfix-Pro-Evaluator

./: CMakeLists.txt  README.md
pseudocode/: math_operations.txt  postfix_evaluator.txt  stack.txt  symbol_table.txt
src/: README.txt  main.cpp  math_operations.hpp  postfix_evaluator.cpp  postfix_evaluator.hpp  stack.hpp  stack.tpp  symbol_table.cpp  symbol_table.hpp
tests/: README-SETUP.txt  README-TERMINAL.txt  test_postfix_evaluator.cpp  test_stack.cpp  test_symbol_table.cpp
